# haskellpobeda

./: haskellpobeda.cabal
app/: Main.hs
static/: style.css
